--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!--Navigation bar-->
-    <nav class="navbar navbar-expand-md navbar-light blue-grey lighten-4">
+    <nav class="navbar navbar-light blue-grey lighten-4">
         <a class="navbar-brand" href="#">FWSolutions</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
             aria-expanded="false" aria-label="Toggle navigation">
