Replace, Rename, Improve

--- a/index.html
+++ b/index.html
@@ -2,165 +2,170 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>FilipWSki's Portfolio Page</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-    <!-- Custom styles -->
-    <link href="css/style.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>FilipWSki's Portfolio Page</title>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" />
+  <!-- Material Design Bootstrap -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.2/css/mdb.min.css" />
+  <!-- Custom styles -->
+  <link href="css/filipwski.css" rel="stylesheet">
 </head>
 
 <body>
-    <!--Navigation bar-->
-    <nav class="navbar navbar-light navbar-expand-md blue-grey lighten-4">
-        <a class="navbar-brand" href="#">FWSolutions</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">
-                        <i class="fa fa-home" aria-hidden="true"></i>Home
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-code" aria-hidden="true"></i>Projects</a>
-                    <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Category 1</a>
-                        <a class="dropdown-item" href="#">Category 2</a>
-                        <a class="dropdown-item" href="#">Category 3</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <br>
-    <br>
-    <!--Cards-->
+  <!--Navigation bar-->
+  <nav class="navbar navbar-light navbar-expand-md blue-grey lighten-4">
+    <a class="navbar-brand" href="#">FWSolutions</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">
+            <i class="fa fa-home" aria-hidden="true"></i>Home
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-code" aria-hidden="true"></i>Projects</a>
+          <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Category 1</a>
+            <a class="dropdown-item" href="#">Category 2</a>
+            <a class="dropdown-item" href="#">Category 3</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <br>
+  <br>
+  <!--Cards-->
+  <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-3">
-            <!--Card 1-->
-            <div class="card card-cascade">
-                <!--Image-->
-                <div class="view overlay">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg" alt="Card image cap">
-                    <a>
-                        <div class="mask rgba-white-slight"></div>
-                    </a>
-                </div>
-                <!--Content-->
-                <div class="card-body text-center">
-                    <h4 class="card-title">
-                        <strong>About me</strong>
-                    </h4>
-                    <h6 class="font-weight-bold indigo-text py-2">Filip Skibinski</h6>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt,
-                        quod quibusdam.</p>
-                </div>
-            </div>
+      <div class="col-lg-3">
+        <!--Card 1-->
+        <div class="card card-cascade">
+          <!--Image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg" alt="Card image cap">
+            <a>
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Content-->
+          <div class="card-body text-center">
+            <h4 class="card-title">
+              <strong>About me</strong>
+            </h4>
+            <h6 class="font-weight-bold indigo-text py-2">Filip Skibinski</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt,
+              quod quibusdam.</p>
+          </div>
         </div>
-        <!--Card 2-->
-        <div class="col-lg-3">
-            <div class="card card-cascade">
-                <!--Image-->
-                <div class="view overlay">
-                    <img class="card-img-top" src="img/card-img/vg-mac.png" alt="Card image cap">
-                    <a>
-                        <div class="mask rgba-white-slight"></div>
-                    </a>
-                </div>
-                <!--Content-->
-                <div class="card-body text-center">
-                    <h4 class="card-title">
-                        <strong>My skills</strong>
-                    </h4>
-                    <h6 class="font-weight-bold indigo-text py-2">Filip Skibinski</h6>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt,
-                        quod quibusdam.</p>
-                </div>
-            </div>
+      </div>
+      <!--Card 2-->
+      <div class="col-lg-3">
+        <div class="card card-cascade">
+          <!--Image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="images/card-img/vg-mac.png" alt="Card image cap">
+            <a>
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Content-->
+          <div class="card-body text-center">
+            <h4 class="card-title">
+              <strong>My skills</strong>
+            </h4>
+            <h6 class="font-weight-bold indigo-text py-2">Filip Skibinski</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt,
+              quod quibusdam.</p>
+          </div>
         </div>
-        <!--Card 3-->
-        <div class="col-lg-3">
-            <div class="card card-cascade">
-                <!--Image-->
-                <div class="view overlay">
-                    <img class="card-img-top" src="img/card-img/vg-window.png" alt="Card image cap">
-                    <a>
-                        <div class="mask rgba-white-slight"></div>
-                    </a>
-                </div>
-                <!--Content-->
-                <div class="card-body text-center">
-                    <h4 class="card-title">
-                        <strong>My projects</strong>
-                    </h4>
-                    <h6 class="font-weight-bold indigo-text py-2">Filip Skibinski</h6>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt,
-                        quod quibusdam.</p>
-                </div>
-            </div>
+      </div>
+      <!--Card 3-->
+      <div class="col-lg-3">
+        <div class="card card-cascade">
+          <!--Image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="images/card-img/vg-window.png" alt="Card image cap">
+            <a>
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Content-->
+          <div class="card-body text-center">
+            <h4 class="card-title">
+              <strong>My projects</strong>
+            </h4>
+            <h6 class="font-weight-bold indigo-text py-2">Filip Skibinski</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt,
+              quod quibusdam.</p>
+          </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+
+  <!--Footer-->
+  <footer class="page-footer font-small blue-grey lighten-4 pt-3 mt-3">
+    <div class="container-fluid text-center text-md-left">
+      <div class="row">
+        <!--First column-->
+        <div class="col-md-6">
+          <h5 class="text-uppercase">Foot content</h5>
+          <p>Footer text</p>
+        </div>
+        <!--Second column-->
+        <div class="col-md-6">
+          <h5 class="text-uppercase">Links</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#">Link1</a>
+            </li>
+            <li>
+              <a href="#">Link2</a>
+            </li>
+            <li>
+              <a href="#">Link3</a>
+            </li>
+            <li>
+              <a href="#">Link4</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!--Copyright-->
+    <div class="footer-copyright py-3 text-center blue-grey lighten-2">
+      © 2018 Copyright:
+      <a href="javascript:void(0);"> Filip Skibinski </a>
     </div>
 
-    <br>
-    <br>
+  </footer>
 
-    <!--Footer-->
-    <footer class="page-footer font-small blue-grey lighten-4 pt-3 mt-3">
-        <div class="container-fluid text-center text-md-left">
-            <div class="row">
-                <!--First column-->
-                <div class="col-md-6">
-                    <h5 class="text-uppercase">Foot content</h5>
-                    <p>Footer text</p>
-                </div>
-                <!--Second column-->
-                <div class="col-md-6">
-                    <h5 class="text-uppercase">Links</h5>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#">Link1</a>
-                        </li>
-                        <li>
-                            <a href="#">Link2</a>
-                        </li>
-                        <li>
-                            <a href="#">Link3</a>
-                        </li>
-                        <li>
-                            <a href="#">Link4</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!--Copyright-->
-        <div class="footer-copyright py-3 text-center blue-grey lighten-2">
-            © 2018 Copyright:
-            <a href="#"> Filip Skibinski </a>
-        </div>
-
-    </footer>
-
-    <!-- SCRIPTS -->
+  <!-- SCRIPTS -->
     <!-- JQuery -->
-    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.2/js/mdb.js"></script>
+    <!-- Custom scripts -->
+    <script src="js/filipwski.js"></script>
 </body>
 
 </html>
