--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <!--Navigation bar-->
   <nav class="navbar navbar-light navbar-expand-md blue-grey lighten-4">
-    <a class="navbar-brand" href="#">FWSolutions</a>
+    <a class="navbar-brand" href="#">FWS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,9 +36,8 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-code" aria-hidden="true"></i>Projects</a>
           <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Category 1</a>
-            <a class="dropdown-item" href="#">Category 2</a>
-            <a class="dropdown-item" href="#">Category 3</a>
+            <a class="dropdown-item" href="#">.NET</a>
+            <a class="dropdown-item" href="#">MacOS/iOS</a>
           </div>
         </li>
       </ul>
@@ -119,7 +118,7 @@
   <br>
 
   <!--Footer-->
-  <footer class="page-footer font-small blue-grey lighten-4 pt-3 mt-3">
+  <footer class="page-footer font-small blue-grey lighten-3 pt-3 mt-3">
     <div class="container-fluid text-center text-md-left">
       <div class="row">
         <!--First column-->
